--- a/app/about-team.html
+++ b/app/about-team.html
@@ -94,7 +94,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/11.jpg" alt="Аватар специалиста">
@@ -115,7 +115,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/2.jpg" alt="Аватар специалиста">
@@ -136,7 +136,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/3.jpg" alt="Аватар специалиста">
@@ -156,7 +156,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/4.jpg" alt="Аватар специалиста">
@@ -176,7 +176,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/5.jpg" alt="Аватар специалиста">
@@ -197,7 +197,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/9.jpg" alt="Аватар специалиста">
@@ -218,7 +218,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/10.jpg" alt="Аватар специалиста">
@@ -238,7 +238,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/8.jpg" alt="Аватар специалиста">
