--- a/app/index.html
+++ b/app/index.html
@@ -232,7 +232,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Терапия</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -247,7 +247,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Хирургия</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -262,7 +262,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Неврология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -277,7 +277,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Ортопедия</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -292,7 +292,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Дерматология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -307,7 +307,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Офтальмология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -322,7 +322,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Кардиология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -337,7 +337,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Стоматология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -352,7 +352,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Репродуктология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -367,7 +367,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Визуальная диагностика</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -382,7 +382,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Лаборатория</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -397,7 +397,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Онкология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -412,7 +412,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Эндокринология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -427,7 +427,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Экзотические животные</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -442,7 +442,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Аптека</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -457,7 +457,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Груминг</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -501,80 +501,80 @@
 						<ul class="swiper-wrapper">
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/1.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/2.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/3.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/4.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/5.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/6.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/7.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/8.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/9.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/10.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/11.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/12.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 						</ul>
-						<button class="about-specialists-swiper__prev" type="button"></button>
-						<button class="about-specialists-swiper__next" type="button"></button>
+						<button class="about-specialists-swiper__prev btn-prev" type="button"></button>
+						<button class="about-specialists-swiper__next btn-next" type="button"></button>
 					</div>
 				</div>
 
