--- a/src/modules/_about-page/_about-page.html
+++ b/src/modules/_about-page/_about-page.html
@@ -37,7 +37,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/11.jpg" alt="Аватар специалиста">
@@ -58,7 +58,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/2.jpg" alt="Аватар специалиста">
@@ -79,7 +79,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/3.jpg" alt="Аватар специалиста">
@@ -99,7 +99,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/4.jpg" alt="Аватар специалиста">
@@ -119,7 +119,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/5.jpg" alt="Аватар специалиста">
@@ -140,7 +140,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/9.jpg" alt="Аватар специалиста">
@@ -161,7 +161,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/10.jpg" alt="Аватар специалиста">
@@ -181,7 +181,7 @@
 
 					<li class="team-list__item">
 						<article class="about-doctor-card">
-							<a class="about-doctor-card__link" href="#">
+							<a class="about-doctor-card__link" href="specialist-page.html">
 
 								<div class="about-doctor-card__image">
 									<img class="about-doctor-card__img" src="images/specialists/8.jpg" alt="Аватар специалиста">
