--- a/src/modules/_services/_services.html
+++ b/src/modules/_services/_services.html
@@ -5,7 +5,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Терапия</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -20,7 +20,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Хирургия</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -35,7 +35,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Неврология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -50,7 +50,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Ортопедия</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -65,7 +65,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Дерматология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -80,7 +80,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Офтальмология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -95,7 +95,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Кардиология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -110,7 +110,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Стоматология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -125,7 +125,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Репродуктология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -140,7 +140,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Визуальная диагностика</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -155,7 +155,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Лаборатория</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -170,7 +170,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Онкология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -185,7 +185,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Эндокринология</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -200,7 +200,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Экзотические животные</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -215,7 +215,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Аптека</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
@@ -230,7 +230,7 @@
 
 				<li class="services-list__item">
 					<article class="service">
-						<a class="service__link" href="#">
+						<a class="service__link" href="service-page.html">
 							<h3 class="service__title">Груминг</h3>
 							<div class="service__botom">
 								<span class="service__quantity">26 услуг</span>
