--- a/src/modules/_about-block/_about-block.html
+++ b/src/modules/_about-block/_about-block.html
@@ -23,80 +23,80 @@
 						<ul class="swiper-wrapper">
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/1.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/2.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/3.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/4.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/5.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/6.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/7.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/8.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/9.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/10.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/11.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 							<li class="swiper-slide">
-								<a class="about-specialists-swiper__link" href="#">
+								<a class="about-specialists-swiper__link" href="specialist-page.html">
 									<img class="about-specialists-swiper__img" src="images/specialists/12.jpg" alt="Фотография врача">
 								</a>
 							</li>
 
 						</ul>
-						<button class="about-specialists-swiper__prev" type="button"></button>
-						<button class="about-specialists-swiper__next" type="button"></button>
+						<button class="about-specialists-swiper__prev btn-prev" type="button"></button>
+						<button class="about-specialists-swiper__next btn-next" type="button"></button>
 					</div>
 				</div>
 
