--- a/src/modules/_header/_header-small.html
+++ b/src/modules/_header/_header-small.html
@@ -8,7 +8,7 @@
 
 			<ul class="menu">
 				<li class="menu__item"><a class="menu__link" href="record-page.html">Запись на прием</a></li>
-				<li class="menu__item"><a class="menu__link" href="#">Выбор специалиста</a></li>
+				<li class="menu__item"><a class="menu__link" href="about-team.html">Выбор специалиста</a></li>
 				<li class="menu__item"><a class="menu__link" href="about-team.html">О нас</a></li>
 				<li class="menu__item"><a class="menu__link" href="contacts.html">Контакты</a></li>
 			</ul>
